--- a/hollow_channel.tex
+++ b/hollow_channel.tex
@@ -71,7 +71,7 @@ where $\nabla_\perp = \partial_x \hat x + \partial_y \hat y$ and $\mathbf{A}_\pe
 That's enough for now.
 
 \section{Thin cylinder model}
-
+\subsection{No longitudinal plasma motion}
 Here we describe the response of an infinitely thin cylinder of plasma with radius $a$ to a positively charged drive beam. We assume the beam is relativistic and much shorter than the wavelength of the plasma. In this model, the plasma electrons receive an initial kick due to the beam but we do not include the beam current in our description of the plasma response. We also assume that the plasma electrons only move radially. Note that after the beam has passed, $J_z=0$ and therefore $A_z=0$ so $\psi=\phi$.
 
 \begin{figure}[ht]\label{fig:thin_cyl}
@@ -165,5 +165,8 @@ Immediately we see that we might run into trouble when $r_s = 0$ due to the dive
     \includegraphics[width=100mm]{./figures/sheath.pdf}
       \caption{$r_s$ and $E_z$ for the thin cylinder model. $\lambda = -1$ and distances are normalized to $a=1$. The initial kick $r_s'(0) = -0.46$. This is the largest kick that Mathematica can use to solve the equation for the given plot range.}
 \end{figure}
+
+\subsection{Adding in longitudinal plasma motion}
+
 
 \end{document}
