--- a/hollow_channel.tex
+++ b/hollow_channel.tex
@@ -68,11 +68,47 @@ where $\nabla_\perp = \partial_x \hat x + \partial_y \hat y$ and $\mathbf{A}_\pe
 \nabla_\perp \cdot \mathbf{A}_\perp = -\frac{\partial \psi}{\partial \xi}
 \end{equation}
 
-That's enough for now.
+The pseudopotential $\psi$ obeys the Poisson-like equation
+
+\begin{equation}\label{eq:Poisson}
+-\nabla^2_\perp \psi = \rho - J_z
+\end{equation}
+
+The continuity equation is
+
+\begin{equation}\label{eq:Cont}
+\frac{\partial}{\partial \xi} (\rho - J_z) + \nabla_\perp \cdot J_\perp = 0
+\end{equation}
+
+The fields are 
+
+\begin{equation}\label{eq:Ez}
+E_z = \frac{\partial \psi}{\partial \xi}
+\end{equation} 
+
+\begin{equation}\label{eq:Bz}
+B_z = (\nabla_\perp \times A_\perp)\cdot \hat{z}
+\end{equation} 
+
+\begin{equation}\label{eq:E_perp}
+E_\perp = -\nabla_\perp \phi - \frac{\partial A_\perp}{\partial \xi}
+\end{equation}
+
+\begin{equation}\label{eq:B_perp}
+B_\perp = \nabla_\perp \times (A_z \hat{z}) + \nabla_z \times A_\perp
+\end{equation}
+
+We will rarely make use of equation~\ref{eq:Bz} because we assume that the plasma electrons only have radial motion which means that $\nabla_\perp \times A_\perp = 0$. We will often make use of the first term in equation~\ref{eq:E_perp} and define the``gaussian" electric field as
+
+\begin{equation}\label{eq:E_guass}
+E_g = -\nabla_\perp \phi
+\end{equation}
+
+This term is especially useful when describing the fields and potentials of the radial charge distribution.
 
 \section{Thin cylinder model}
 \subsection{No longitudinal plasma motion}
-Here we describe the response of an infinitely thin cylinder of plasma with radius $a$ to a positively charged drive beam. We assume the beam is relativistic and much shorter than the wavelength of the plasma. In this model, the plasma electrons receive an initial kick due to the beam but we do not include the beam current in our description of the plasma response. We also assume that the plasma electrons only move radially. Note that after the beam has passed, $J_z=0$ and therefore $A_z=0$ so $\psi=\phi$.
+Here we describe the response of an infinitely thin cylinder of plasma with radius $a$ to a positively charged drive beam. The charge distribution of the electrons in the plasma is given by $\rho = \sigma \delta(r-a)$ where $\sigma$ is the surface charge density. We can also define a line charge density for the plasma as $\lambda_0 = 2\pi a \sigma$. We assume the beam is relativistic and much shorter than the wavelength of the plasma. In this model, the plasma electrons receive an initial kick due to the beam but we do not include the beam current in our description of the plasma response. We also assume that the plasma electrons only move radially. Note that after the beam has passed, $J_z=0$ and therefore $A_z=0$ so $\psi=\phi$.
 
 \begin{figure}[ht]\label{fig:thin_cyl}
   \centering
@@ -86,7 +122,7 @@ The beam is a flat top with radius $\sigma_r \ll a$, energy $\gamma$, and charge
 I_b = \frac{Q_b}{\sigma_z}c = \frac{n_b \pi \sigma_r^2 \sigma_z}{\sigma_z}c = \lambda_b c
 \end{equation}
 
-We can normalize the beam current to $I_b$ to the Alfven Current $I_A = m_e c^3/e$ so $\bar{I} = e I_b /m_e c^3$. The quantity $\bar{I} = e \lambda_b/m_e c^2$ is also called the Budker parameter $\nu$. 
+We can normalize the beam current $I_b$ to the Alfven Current $I_A = m_e c^3/e$ so $\bar{I} = e I_b /m_e c^3$. The quantity $\bar{I} = e \lambda_b/m_e c^2$ is also called the Budker parameter $\nu$. 
 
 Next, we find the beam field at the plasma radius $a$ using Gauss's law:
 
@@ -100,20 +136,33 @@ An electron at the plasma radius receives an inward kick $\Delta p = F \Delta t 
 \Delta p = -e \frac{2m_e c^2 \bar{I}}{e}\frac{\sigma_z/c}{a} = -\frac{m_e c \bar{I}}{5}
 \end{equation}  
 
-Of course it is completely arbitrary to choose $\sigma_z = a/10$, but this allows us to see that the strength of the kick is really controlled by the peak current and nothing else. We also note that our model does not include radiative effects, so for our model to be reasonably accurate, we should require that the normalized kick $\Delta p/m_e c \ll 1$ which means $\bar{I} \ll 5$. At FACET, $\bar{I} \approx 1$ and $\sigma_z/\lambda_p \approx 1/5$. 
+Of course it is completely arbitrary to choose $\sigma_z = a/10$, but this allows us to see that the strength of the kick is really controlled by the peak current and nothing else. 
 
-We now seek an equation of motion for the position of the plasma electron sheath $r_s$. We assume the ions are stationary. First, we solve for the potential $\psi$ and we take $\psi(\infty) = 0$. Outside the cylinder, there is zero net charge (after the drive beam has passed), so Gauss's law gives $E(r > a) = 0$ and therefore $\psi(r > a) = const = 0$. Inside the electron sheath there is no charge either, so $E(r < r_s) = 0$ and $\psi(r < r_s) = \psi_0$. Between the electron sheath and the ion layer there is a net charge and Gauss's law gives $E(r) = 2\bar{I}/r$ for $r_s < r < a$. Note that we normalize $E$ and $\psi$ to $m_e c^2/e$. We can now find the potential by integrating the electric field:
+%We also note that our model does not include radiative effects, so for our model to be reasonably accurate, we should require that the normalized kick $\Delta p/m_e c \ll 1$ which means $\bar{I} \ll 5$. At FACET, $\bar{I} \approx 1$ and $\sigma_z/\lambda_p \approx 1/5$. 
 
-\begin{equation}\label{eq:thin_psi}
-\psi(r) = -\int_0^r E(r') dr' = \psi_0 - \int_{r_s}^r \frac{2\bar{I}}{r'}dr' = \psi_0 + 2\bar{I} \log\left(\frac{r_s}{r}\right)
+We now seek an equation of motion for the position of the plasma electron sheath $r_s$. We assume the ions are stationary. Even though the plasma cylinder is infinitely thin, we can still introduce a notion of charge shielding by noting that the amount of plasma electrons that participate in the interaction is proportional to the line charge of the beam $\lambda_b = m_e c^2 \bar{I}/e$. Then the plasma line charge interacting with the beam is:
+
+\begin{equation}\label{eq:part_charge}
+\lambda_i = \left\{ \begin{array}{lr}
+m_e c^2 \bar{I}/e & \lambda_b < \lambda_0 \\
+\lambda_0 & \lambda_b > \lambda_0
+\end{array} \right.
 \end{equation}
 
-Using the boundary condition $\psi(a) = 0$ we find that $\psi_0 = 2\bar{I} \log\left(\frac{a}{r_s}\right)$ so:
+For now we assume that $ \lambda_b < \lambda_0 $ which will likely be the case when we move beyond the thin cylinder model.
+
+To solve for $r_s$, we first need to solve for the potential $\psi$. We take $\psi(\infty) = 0$. Outside the cylinder, there is zero net charge (after the drive beam has passed), so Gauss's law gives $E_g(r > a) = 0$ and therefore $\psi(r > a) = const = 0$. Inside the electron sheath there is no charge either, so $E_g(r < r_s) = 0$ and $\psi(r < r_s) = \psi_0$. Between the electron sheath and the ion layer there is a net charge and Gauss's law gives $E_g(r) = -2\bar{I}/r$ for $r_s < r < a$. Note that we normalize $E$ and $\psi$ to $m_e c^2/e$. We can now find the potential by integrating the electric field:
+
+\begin{equation}\label{eq:thin_psi}
+\psi(r) = -\int_0^r E(r') dr' = \psi_0 - \int_{r_s}^r \frac{-2\bar{I}}{r'}dr' = \psi_0 - 2\bar{I} \log\left(\frac{r_s}{r}\right)
+\end{equation}
+
+Using the boundary condition $\psi(a) = 0$ we find that $\psi_0 = -2\bar{I} \log\left(\frac{a}{r_s}\right)$ so:
 
 \begin{equation}\label{eq:psi_everywhere}
 \psi(r) = \left\{ \begin{array}{lr}
-2\bar{I} \log\left(\frac{a}{r_s}\right) & 0<r<r_s \\
-2\bar{I} \log\left(\frac{a}{r_s}\right) + 2\bar{I} \log\left(\frac{r_s}{r}\right) & r_s<r<a \\
+-2\bar{I} \log\left(\frac{a}{r_s}\right) & 0<r<r_s \\
+-2\bar{I} \log\left(\frac{a}{r_s}\right) - 2\bar{I} \log\left(\frac{r_s}{r}\right) & r_s<r<a \\
 0 & a<r
 \end{array} \right.
 \end{equation}
@@ -121,16 +170,16 @@ Using the boundary condition $\psi(a) = 0$ we find that $\psi_0 = 2\bar{I} \log\
 \begin{figure}[ht]\label{fig:fields}
   \centering
     \includegraphics[width=100mm]{./figures/fields.pdf}
-      \caption{$E_r$ and $\psi$ for the thin cylinder model. $\bar{I} = 1$ and distances are normalized to $a=1$.}
+      \caption{$E_g$ and $\psi$ for the thin cylinder model. $\bar{I} = 1$ and distances are normalized to $a=1$.}
 \end{figure}
 
-Next, we find $\mathbf{A}_{\perp}$ using equation~\ref{eq:gauge_qs} and assuming that the motion of the plasma electrons is purely radial so $A_z = 0$ and $\psi = \phi$. Then
+Next, we find $\mathbf{A}_{\perp}$ using equation~\ref{eq:gauge_qs} and assuming that the motion of the plasma electrons is purely radial so $A_z = 0$. Then
 
 \begin{equation}\label{eq:a_perp}
-\nabla_\perp \cdot \mathbf{A}_\perp = -\frac{\partial \phi}{\partial \xi} = - \frac{\partial \phi}{\partial r_s}\frac{\partial r_s}{\partial \xi} = \frac{2\bar{I}}{r_s}r_s'
+\nabla_\perp \cdot \mathbf{A}_\perp = -\frac{\partial \psi}{\partial \xi} = - \frac{\partial \psi}{\partial r_s}\frac{\partial r_s}{\partial \xi} = -\frac{2\bar{I}}{r_s}r_s'
 \end{equation}
 
-In cylindrical coordinates, the divergence is
+We evaluated the derivative $\partial_\xi \psi$ at $r = r_s$. In cylindrical coordinates, the divergence is
 
 \begin{equation}\label{eq:a_perp_cyl}
 \nabla_\perp \cdot \mathbf{A}_\perp = \frac{1}{r}\frac{\partial}{\partial r} (r A_r) + \frac{1}{r}\frac{\partial A_{\theta}}{\partial \theta}
@@ -139,16 +188,16 @@ In cylindrical coordinates, the divergence is
 but we drop the $\theta$ term due to the cylindrical symmetry. We note that $r$ and $r_s$ are independent variables in this equation so we can easily integrate the equation in $r$ to find $A_r$
 
 \begin{equation}\label{eq:a_r}
-\frac{1}{r}\frac{\partial}{\partial r} (r A_r) = \frac{2\bar{I}}{r_s}r_s' \rightarrow A_r = \frac{\bar{I} r r_s'}{r_s}
+\frac{1}{r}\frac{\partial}{\partial r} (r A_r) = -\frac{2\bar{I}}{r_s}r_s' \rightarrow A_r = -\frac{\bar{I} r r_s'}{r_s}
 \end{equation}
 
 At this point, we'd like to start determining some physical quantities of interest, like $E_z$
 
 \begin{equation}\label{eq:E_z}
-E_z = \frac{\partial \psi}{\partial \xi} = -\frac{2\bar{I}}{r_s}r_s'
+E_z = \frac{\partial \psi}{\partial \xi} = \frac{2\bar{I}}{r_s}r_s'
 \end{equation}
 
-so we need an equation of motion for $r_s$. We can get the EOM by finding the force on the plasma electrons in the sheath:
+We see that $E_z$ is negative (at least in the first part of the oscillation) because the kick is inward ($r_s' < 0$). Now we need an equation of motion for $r_s$ which we can get by finding the force on the plasma electrons in the sheath:
 
 \begin{equation}\label{eq:force}
 F =-(E_r -V_z B_{\theta}) = -E_r
@@ -157,7 +206,7 @@ F =-(E_r -V_z B_{\theta}) = -E_r
 because we have assumed that $V_z = 0$. The radial field is
 
 \begin{equation}\label{eq:force}
-E_r =-\nabla_{\perp} \phi - \frac{\partial A_r}{\partial \xi} = -\frac{\bar{I} r}{r_s^2}[r_s r_s'' - r_s'^2]
+E_r =-\nabla_{\perp} \phi - \frac{\partial A_r}{\partial \xi} = \frac{\bar{I} r}{r_s^2}[r_s r_s'' - r_s'^2]
 \end{equation}
 
 with $\nabla_{\perp} \phi = 0$ for the sheath electrons because there is zero charge within the sheath layer. The EOM $\partial_{\xi} P_{\perp} = -E_r$ is rewritten with the ``particle tracking" trajectory $\xi = t - z \rightarrow \partial_{\xi} = (1-v_z)\partial_t$:
@@ -169,13 +218,13 @@ with $\nabla_{\perp} \phi = 0$ for the sheath electrons because there is zero ch
 and using the integral of motion $\gamma - P_z = 1 + \psi$
 
 \begin{equation}\label{eq:EOM}
-\frac{\partial P_{\perp}}{\partial \xi} = \frac{\partial}{\partial \xi}[(1+\psi)r_s'] = \frac{\bar{I} r}{r_s^2}[r_s r_s'' - r_s'^2] 
+\frac{\partial P_{\perp}}{\partial \xi} = \frac{\partial}{\partial \xi}[(1+\psi)r_s'] = -\frac{\bar{I} r}{r_s^2}[r_s r_s'' - r_s'^2] 
 \end{equation}
 
-Plugging in $\psi = \phi$ we have:
+Plugging in $\psi$ and $r=r_s$ we have:
 
 \begin{equation}\label{eq:rs}
-\left(1+2\bar{I}\log\left(\frac{a}{r_s}\right) - \bar{I}\right)r_s'' -\bar{I}\frac{r_s'^2}{r_s} = 0
+\left(1+\bar{I} + 2\bar{I}\log\left(\frac{r_s}{a}\right) \right)r_s'' +\bar{I}\frac{r_s'^2}{r_s} = 0
 \end{equation}
 
 In order to study this equation, let's set $a=1$:
